--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
           <div class="col-md-6">
             <h5>Resources</h5>
             <hr>
-            <h5><a href="https://iota.readme.io/docs/fields">IOTA API Documentation</a></h5>
+            <h5><a href="https://iota.readme.io/v1.2.0/reference">IOTA API Documentation</a></h5>
             <h5><a href="https://github.com/iotaledger/iota.lib.js">iota.lib.js</a></h5>
           </div>
           <div class="col-md-6">
