Update dead link

--- a/seed.html
+++ b/seed.html
@@ -34,9 +34,9 @@
     <div class="container pad-top">
       <h1 class="display-4">IOTA Seed Generator</h1>
       <hr />
-      A deterministic seed generator based on the <a href="http://masterpasswordapp.com/algorithm.html">Master Password Algorithm</a>, adapted from Tom Thorogood's <a href="https://github.com/tmthrgd/mpw-js">Javascript implementation</a> in particular, which is <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>-licensed.<br /><br />
+      A deterministic seed generator based on the <a href="https://en.wikipedia.org/wiki/Master_Password">Master Password Algorithm</a>, adapted from Tom Thorogood's <a href="https://github.com/tmthrgd/mpw-js">Javascript implementation</a> in particular, which is <a href="https://creativecommons.org/licenses/by/4.0/">CC BY 4.0</a>-licensed.<br /><br />
 
-      Please do not use these seeds yet!
+      <b>Note that this generator has not been audited so please do not use seeds it produces to store money yet.</b>
     </div>
 
     <div class="container">
@@ -62,7 +62,7 @@
         <div class="col-md-2">
           <h5>&nbsp;</h5>
           <div class="input-group">
-            <button class="btn btn-primary" disabled name=calculatekey>Calculate key</button>
+            <button href="#" class="btn btn-primary" disabled name=calculatekey>Calculate key</button>
           </div>
         </div>
       </div>
